Refatoração da dashboard, implementação do formulário de cadastro de recortes

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,3 +15,25 @@ body {
   color: var(--dark);
   background: var(--dark);
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: white;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #d1d1d6;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #a7a7ab;
+}
